--- a/package.json
+++ b/package.json
@@ -48,7 +48,9 @@
     "@angular/router": "3.0.0-rc.2",
     "babel-polyfill": "^6.13.0",
     "express": "^4.14.0",
+    "mongoose": "^4.6.2",
     "rxjs": "5.0.0-beta.11",
+    "socket.io": "^1.4.8",
     "zone.js": "^0.6.17"
   }
 }
